deployment/9_SiteDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pnoj-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pnoj-site
  template:
    metadata:
      labels:
        app: pnoj-site
    spec:
      containers:
      - image: pnoj/site:v0.1.9
        name: pnojsite
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: site-config
          mountPath: "/app/pnoj/config"
          readOnly: true
      volumes:
      - name: site-config
        secret:
          secretName: pnoj-site-secret
