deployment/07_MemcachedService.yaml
apiVersion: v1
kind: Service
metadata:
  name: pnoj-cache-service
spec:
  ports:
  - port: 11211
    protocol: TCP
  selector:
    app: pnoj-cache
