deployment/10_SiteService.yaml
apiVersion: v1
kind: Service
metadata:
  name: pnoj-site-service
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: pnoj-site
