deployment/5_PostgresService.yaml
apiVersion: v1
kind: Service
metadata:
  name: pnoj-db-service
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: pnoj-db
